# personal-automation

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  scratch.ipynb  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/scripts/: README.md  calendar_automation.py
.github/workflows/: calendar-automation.yml
personal_automation/: audio.py  cli.py  movie.py
scripts/: calendar_automation.py
