[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-automation"
version = "0.0.1"
dependencies = [
    "pydub",
    'moviepy',
    "loguru",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.177.0",
]

[project.scripts]
pa = "personal_automation.cli:app"
